spectec/test/elab/neg/ctx-invalid-metavar-in-prem.spectec
;; A rule premise binds a meta-variable identifier with a numeric
;; suffix that strip_var_suffix would remove.

syntax foo = nat

relation R: foo |- foo
  hint(input %0)

rule R/foo:
  0 |- 0
  -- var x_1 : foo
